fixed minor alignment issues for small viewports

--- a/src/components/Activity/ActivityHeader.scss
+++ b/src/components/Activity/ActivityHeader.scss
@@ -14,7 +14,7 @@
   padding: 2rem 2rem 1rem 1rem;
   min-height: 10.5rem + 2rem + 1rem;
   height: fit-content;
-  min-width: fit-content;
+  width: 100%;
 
   .activity-type {
     opacity: 0.75;
