--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -79,11 +79,9 @@
 @keyframes anvil {
   1% {
     transform: scale(0.96) translateY(10px);
-    opacity: 0;
   }
 
   100% {
     transform: scale(1) translateY(0);
-    opacity: 1;
   }
 }
